fixed card titile on mobile version

--- a/main.css
+++ b/main.css
@@ -421,7 +421,7 @@ ul {
     } 
 
     .card__thumbnail > .card__title{ 
-        bottom: 7rem;
+        bottom: 10vw;
     }
 
     .morebtn {
